--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
       <span style="--i: 1">
         <i>Code</i>
         With
-        <i>Aarzoo</i>
+        <i>Pat</i>
       </span>
       <span style="--i: 2">
         <i>Code</i>
         With
-        <i>Aarzoo</i>
+        <i>Pat</i>
       </span>
       <span style="--i: 3">
         <i>Code</i>
         With
-        <i>Aarzoo</i>
+        <i>Pat</i>
       </span>
       <span style="--i: 4">
         <i>Code</i>
         With
-        <i>Aarzoo</i>
+        <i>Pat</i>
       </span>
       <span style="--i: 5">
         <i>Code</i>
         With
-        <i>Aarzoo</i>
+        <i>Pat</i>
       </span>
       <span style="--i: 6">
         <i>Code</i>
         With
-        <i>Aarzoo</i>
+        <i>Pat</i>
       </span>
       <span style="--i: 7">
         <i>Code</i>
